# moa_allocator

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  PRODUCT.md  PROJECT.md  README.md  TESTING.md  main.py  pyproject.toml  to-dos.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/RULES/: architecture-boundaries.md  dsl-integrity.md  process.md
helpful_docs/: pidb_ib_API_access.md
moa_allocations/: __init__.py  exceptions.py
moa_allocations/compiler/: __init__.py  compiler.py
moa_allocations/engine/: __init__.py  node.py  runner.py  strategy.py
one_timer/: README.md  run_spy_2018.ps1  run_spy_2018.sh
openspec/: config.yaml  pidb_ib_integration.md
openspec/changes/: cli-interface-upgrade-proposal-input.md
openspec/moa_strategy_DSL/: moa_DSL_schema.json  moa_Req_to_DSL.md
strategies/: dual_mom.moastrat.json  first.moastrat.json  risk_switch.moastrat.json  risk_switch_daily.moastrat.json  spy_2018.moastrat.json  spy_all_metrics.moastrat.json  spy_sma100.moastrat.json  spy_sma200.moastrat.json  vola_shield.moastrat.json  vola_shield2.moastrat.json
tests/: borg35r2.clj
tests/unit/: test_algos_base_select_weight.py  test_algos_select_if_condition_weight_specified.py  test_algos_select_topn_bottomn_invvol.py  test_cli_integration.py  test_compile_strategy_validation.py  test_default_price_fetcher.py  test_logging.py  test_metrics.py  test_netting.py  test_node_classes.py  test_public_api.py  test_run_entry_point.py  test_runner_e2.py  test_runner_e3.py  test_runner_e4.py  test_runner_init.py  test_semantic_validation.py  (+3 more)
(+160 files in other folders)
